Bug 463929. Support 8-bit WAV streams. r+sr=roc