content/media/video/public/nsAudioStream.h
@@ -46,12 +46,19 @@ extern PRLogModuleInfo* gAudioStreamLog;
 class nsAudioStream 
 {
  public:
-  // Initialize Audio Library. Some Audio backends (eg. PortAudio) require initializing
+  enum SampleFormat
+  {
+    FORMAT_U8,
+    FORMAT_S16_LE,
+    FORMAT_FLOAT32_LE
+  };
+
+  // Initialize Audio Library. Some Audio backends require initializing the
   // library before using it. 
   static void InitLibrary();
 
-  // Shutdown Audio Library. Some Audio backends (eg. PortAudio) require shutting down
-  // the library after using it. 
+  // Shutdown Audio Library. Some Audio backends require shutting down the
+  // library after using it.
   static void ShutdownLibrary();
 
   nsAudioStream();
@@ -59,20 +66,15 @@ class nsAudioStream
   // Initialize the audio stream. aNumChannels is the number of audio channels 
   // (1 for mono, 2 for stereo, etc) and aRate is the frequency of the sound 
   // samples (22050, 44100, etc).
-  void Init(PRInt32 aNumChannels, PRInt32 aRate);
+  void Init(PRInt32 aNumChannels, PRInt32 aRate, SampleFormat aFormat);
 
   // Closes the stream. All future use of the stream is an error.
   void Shutdown();
 
-  // Write sound data to the audio hardware. aBuf is an array of floats of
-  // length aCount. aCount should be evenly divisible by the number of 
-  // channels in this audio stream.
-  void Write(const float* aBuf, PRUint32 aCount);
-
-  // Write sound data to the audio hardware.  aBuf is an array of shorts in
-  // signed 16-bit little endian format of length aCount.  Acount should be
+  // Write sound data to the audio hardware.  aBuf is an array of samples in
+  // the format specified by mFormat of length aCount.  aCount should be
   // evenly divisible by the number of channels in this audio stream.
-  void Write(const short* aBuf, PRUint32 aCount);
+  void Write(const void* aBuf, PRUint32 aCount);
 
   // Return the number of sound samples that can be written to the audio device
   // without blocking.
@@ -112,6 +114,8 @@ class nsAudioStream
   float mStartTime;
   float mPauseTime;
   PRInt64 mSamplesBuffered;
+
+  SampleFormat mFormat;
 
   PRPackedBool mPaused;
 };
